# OptiMA

./: CMakeLists.txt  OptiMAConfig.cmake.in  README.md
TxnSP/: CMakeLists.txt
TxnSP/benchmark/: lengths0.txt  lengths1.txt  lengths2.txt  lengths3.txt  lengths4.txt  lengths5.txt  transactions0.txt  transactions2.txt
TxnSP/data/analyzer/: 10_3_n_1000.00_100.00_0.01_1000_.csv  10_3_n_1000.00_200.00_0.01_1000_.csv  10_3_n_1000.00_300.00_0.01_1000_.csv  10_3_u_100.00_1000.00_0.01_1000_.csv  10_4_n_1000.00_100.00_0.01_1000_.csv  10_4_n_1000.00_200.00_0.01_1000_.csv  10_4_n_1000.00_300.00_0.01_1000_.csv  10_4_u_100.00_1000.00_0.01_1000_.csv  7_3_n_1000.00_100.00_0.01_1000_.csv  7_3_n_1000.00_200.00_0.01_1000_.csv  7_3_n_1000.00_300.00_0.01_1000_.csv  7_3_u_100.00_1000.00_0.01_1000_.csv  7_4_n_1000.00_100.00_0.01_1000_.csv  7_4_n_1000.00_200.00_0.01_1000_.csv  7_4_n_1000.00_300.00_0.01_1000_.csv  7_4_u_100.00_1000.00_0.01_1000_.csv  8_3_n_1000.00_100.00_0.01_1000_.csv  8_3_n_1000.00_200.00_0.01_1000_.csv  8_3_n_1000.00_300.00_0.01_1000_.csv  8_3_u_100.00_1000.00_0.01_1000_.csv  8_4_n_1000.00_100.00_0.01_1000_.csv  8_4_n_1000.00_200.00_0.01_1000_.csv  8_4_n_1000.00_300.00_0.01_1000_.csv  8_4_u_100.00_1000.00_0.01_1000_.csv  9_3_n_1000.00_100.00_0.01_1000_.csv  9_3_n_1000.00_200.00_0.01_1000_.csv  9_3_n_1000.00_300.00_0.01_1000_.csv  9_3_u_100.00_1000.00_0.01_1000_.csv  9_4_n_1000.00_100.00_0.01_1000_.csv  9_4_n_1000.00_200.00_0.01_1000_.csv  9_4_n_1000.00_300.00_0.01_1000_.csv  9_4_u_100.00_1000.00_0.01_1000_.csv
TxnSP/data/validator/: 10_3_n_1000.00_100.00_0.20_1000.csv  10_3_n_1000.00_100.00_0.40_1000.csv  10_3_n_1000.00_100.00_0.60_1000.csv  10_3_n_1000.00_100.00_0.80_1000.csv  10_4_n_1000.00_100.00_0.20_1000.csv  10_4_n_1000.00_100.00_0.40_1000.csv  10_4_n_1000.00_100.00_0.60_1000.csv  10_4_n_1000.00_100.00_0.80_1000.csv  8_3_n_1000.00_100.00_0.20_1000.csv  8_3_n_1000.00_100.00_0.40_1000.csv  8_3_n_1000.00_100.00_0.60_1000.csv  8_3_n_1000.00_100.00_0.80_1000.csv  8_4_n_1000.00_100.00_0.20_1000.csv  8_4_n_1000.00_100.00_0.40_1000.csv  8_4_n_1000.00_100.00_0.60_1000.csv  8_4_n_1000.00_100.00_0.80_1000.csv  9_3_n_1000.00_100.00_0.20_1000.csv  9_3_n_1000.00_100.00_0.40_1000.csv  9_3_n_1000.00_100.00_0.60_1000.csv  9_3_n_1000.00_100.00_0.80_1000.csv  9_4_n_1000.00_100.00_0.20_1000.csv  9_4_n_1000.00_100.00_0.40_1000.csv  9_4_n_1000.00_100.00_0.60_1000.csv  9_4_n_1000.00_100.00_0.80_1000.csv  Epinions_10_3.csv  Epinions_10_4.csv  Epinions_8_3.csv  Epinions_8_4.csv  Epinions_9_3.csv  Epinions_9_4.csv  YCSB_10_3.csv  YCSB_10_4.csv  YCSB_8_3.csv  YCSB_8_4.csv  YCSB_9_3.csv  YCSB_9_4.csv
TxnSP/include/ProblemModels/: Problem.h  Schedule.h
TxnSP/include/Shared/: SharedFunctions.h  SharedParameters.h
TxnSP/include/Solvers/: DPSolver.h  ESSolver.h  MIPSolver.h  SASolver.h
TxnSP/include/Structs/: AnalyzerInput.h  EvaluatorInput.h  SolverOutput.h
TxnSP/include/TxnSP/Shared/: SharedParameters.h
TxnSP/src/ProblemModels/: Problem.cpp  Schedule.cpp
TxnSP/src/Shared/: SharedModels.cpp
TxnSP/src/Solvers/: DPSolver.cpp  ESSolver.cpp  MIPSolver.cpp  SASolver.cpp
TxnSP/src/Structs/: SolverOutput.cpp
TxnSP/src/Testers/: Analyzer.cpp  Evaluator.cpp
include/AgentModels/: Agent.h  AgentCore.h  AgentCoreFactory.h  AgentInfo.h  AgentTemplate.h  CorePool.h  IAgentCoreFactory.h  PostBox.h
include/Benchmarks/FactoryFloor/: FactoryFloorBenchmark.h  FactoryFloorParameters.h  Job.h  JobCreator.h
include/Benchmarks/Shared/: RandomNumber.h
include/Engine/: AgentManager.h  DefaultEstimator.h  Driver.h  Estimator.h  Executor.h  ExecutorState.h  IAgentManager.h  IDriver.h  IExecutor.h  IListener.h  IScheduler.h  ITransactionFactory.h  Listener.h  MultiAgentModel.h  PluginManager.h  Postmaster.h  Scheduler.h  SchedulerSettings.h  TransactionFactory.h
include/OptiMA/: FactoryFloor.h  OptiMA.h
include/OptiMA/AgentModels/: Agent.h  AgentFactory.h  AgentInfo.h  AgentPool.h  AgentTemplate.h  IAgentFactory.h  PostBox.h
include/OptiMA/Engine/: AgentManager.h  DefaultEstimator.h  Driver.h  Estimator.h  Executor.h  ExecutorState.h  IAgentManager.h  IDriver.h  IExecutor.h  IListener.h  IScheduler.h  Listener.h  MultiAgentModel.h  PluginManager.h  Postmaster.h  Scheduler.h  SchedulerSettings.h  TransactionFactory.h
include/OptiMA/PluginModels/: IPluginInstanceFactory.h  Plugin.h  PluginInstance.h  PluginInstanceFactory.h
include/OptiMA/Shared/: Exceptions.h  ITupleWrapper.h  Memory.h  Message.h  SharedFactories.h  TupleWrapper.h  Types.h
include/PluginModels/: IPluginInstanceFactory.h  Plugin.h  PluginInstance.h  PluginInstanceFactory.h
include/Shared/: Exceptions.h  ISharedPointerWrapper.h  ITupleWrapper.h  Memory.h  Message.h  Record.h  SharedFactories.h  SharedPointerWrapper.h  TupleWrapper.h  Types.h
include/TransactionModels/: Begin.h  Communicate.h  CreateAgent.h  DestroyAgent.h  GetAgentInfo.h  HaltProgram.h  ITransaction.h  Operate.h  ProceduralTransaction.h  Process.h  ProcessingTransaction.h  StartAgent.h  StopAgent.h  Transaction.h  TransactionQueue.h  TransactionResult.h
src/AgentModels/: Agent.cpp  AgentCore.cpp  AgentPool.cpp  CorePool.cpp  PostBox.cpp
src/Engine/: AgentManager.cpp  DefaultEstimator.cpp  Driver.cpp  Executor.cpp  ExecutorState.cpp  Listener.cpp  MultiAgentModel.cpp  PluginManager.cpp  Postmaster.cpp  Scheduler.cpp  TransactionFactory.cpp
src/PluginModels/: PluginInstance.cpp
src/Shared/: Exceptions.cpp  IPointerWrapper.cpp  Memory.cpp  Message.cpp
src/TransactionModels/: Begin.cpp  Communicate.cpp  CreateAgent.cpp  DestroyAgent.cpp  GetAgentInfo.cpp  ProceduralTransaction.cpp  Process.cpp  ProcessingTransaction.cpp  StartAgent.cpp  StopAgent.cpp  Transaction.cpp  TransactionQueue.cpp  TransactionResult.cpp
(+44 files in other folders)
